Cleaned up Block mininig form. Added pending tx's display for the current block to be mined. Fixed pop-up window alignment.

--- a/bc_site/static/css/block_tx_design.css
+++ b/bc_site/static/css/block_tx_design.css
@@ -1,39 +1,74 @@
 .block-container {
-    background-color: #f1f1f1;
-    border: 2px solid #008CBA;
-    width: 17vw;
-    height: 300px;
-    margin: 15px;
-    text-align: center;
-    border-radius: 10px;
-  }
+  background-color: #f1f1f1;
+  border: 2px solid #008CBA;
+  width: 20vw;
+  height: 300px;
+  margin: 15px;
+  text-align: center;
+  border-radius: 10px;
+  margin-top:1px;
+}
 
-  .tx_button {
-    background-color: #008CBA;; /* Green */
-    border: none;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 1px 1px;
-    cursor: pointer;
-    border-radius: 4px;
-  }
+.mine_block_button{
+  background-color: #ba3b00;; 
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 1px 1px;
+  cursor: pointer;
+  border-radius: 4px;
+}
 
-  tr.space_under>td {
-    padding-bottom: 2em;
-  }
+.tx_button {
+  position: relative;
+  background-color: #008CBA; 
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 1px 1px;
+  cursor: pointer;
+  border-radius: 4px;
+}
 
-  .arrow {
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-  }
+  /* .tx_button:active{
+    background-color: rgb(238, 80, 7);
+    
+    } */
 
-  .right {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-  }
+.block_space_under {
+  padding-bottom: 2em;
+}
+
+.tx_space_under {
+  padding-bottom: 0.2em;
+}
+
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
+div.hash_overflow {
+  white-space: nowrap; 
+  width: 18vw; 
+  overflow: hidden;
+  text-overflow: ellipsis; 
+  line-height: 10px;
+  margin-bottom:20px;
+  text-align: left;
+}
