--- a/bc_site/static/css/style.css
+++ b/bc_site/static/css/style.css
@@ -98,4 +98,7 @@ body {
     padding: 10px;
   } */
   
-
+  .center_table {
+    margin-left: auto;
+    margin-right: auto;
+  }
