--- a/bc_site/static/css/tx_popup.css
+++ b/bc_site/static/css/tx_popup.css
@@ -19,8 +19,8 @@
     position: absolute;
     z-index: 1;
     bottom: 125%;
-    left: 50%;
-    margin-left: -80px;
+    left: -50%;
+    margin-left: -150px;
   }
 
   /* Popup arrow */
@@ -51,3 +51,5 @@
   from {opacity: 0;}
   to {opacity:1 ;}
 }
+
+/* https://stackoverflow.com/questions/43871090/pop-out-automatically-disappear-after-some-seconds */
